Added dockerfile
